# MachineLearning

ModelLibrary/: API.cpp  API.h  CMakeLists.txt  MainMultiLayer.cpp  Model.cpp  Model.h  MultiLayer.cpp  MultiLayer.h  MultiLayerCool.cpp  MultiLayerCool.h
ModelLibrary/test/: TestModel.cpp  TestModel.h
